tests/negative/neg_case_on_string.safe
-- Test: neg_case_on_string
-- Description: Case on String remains outside PR11.2.
-- Expected: REJECT unsupported_source_construct

package Neg_Case_On_String

   function Lookup (Name : in String) returns Integer

      case Name
         when 'a'
            return 1;

         when others
            return 0;





